# running-heatmap-ha

./: LICENSE  LICENSE.upstream  README.md  main.py  pyproject.toml  repository.json  repository.yaml
heatmap/: assets.py  colormaps.py  constants.py  parsers.py  serve.py  stats_panel.py  tracks.py
heatmap/sources/: intervals_icu.py
running-heatmap/: CHANGELOG.md  Dockerfile  Makefile  config.yaml  run.sh
running-heatmap/heatmap/: __init__.py  activities.py  admin.html  admin.py  admin_server.py  basemaps.py  config.py  format.py  layer_panel.py  legend.py  localization.py  render.py  serve.py  tiles.py
running-heatmap/heatmap/sources/: __init__.py  intervals_icu.py  strava_export.py
running-heatmap/tests/: __init__.py  test_incremental_rebuild.py
running-heatmap/translations/: en.yaml
scripts/: generate_demo_data.py
