[project]
name = "running-heatmap"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "fitparse",
    "folium",
    "scipy",
    "pillow",
    "matplotlib",
    "gpxpy>=1.6.2",
    "tqdm>=4.67.3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false
